--- a/cdg/CMakeLists.txt
+++ b/cdg/CMakeLists.txt
@@ -1,21 +1,17 @@
-add_library(SkeletonPass MODULE
-    # List your source files here.
+add_library(CDGPass MODULE
     cdg.cpp
 )
 
 # Use C++11 to compile our pass (i.e., supply -std=c++11).
-target_compile_features(SkeletonPass PRIVATE cxx_range_for cxx_auto_type)
+target_compile_features(CDGPass PRIVATE cxx_range_for cxx_auto_type)
 
 # LLVM is (typically) built with no C++ RTTI. We need to match that;
 # otherwise, we'll get linker errors about missing RTTI data.
-set_target_properties(SkeletonPass PROPERTIES
-    COMPILE_FLAGS "-fno-rtti"
-)
+set_target_properties(CDGPass PROPERTIES COMPILE_FLAGS "-fno-rtti")
 
-# Get proper shared-library behavior (where symbols are not necessarily
-# resolved when the shared library is linked) on OS X.
-if(APPLE)
-    set_target_properties(SkeletonPass PROPERTIES
-        LINK_FLAGS "-undefined dynamic_lookup"
-    )
-endif(APPLE)
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
